# bazel-examples

./: .gitignore
bazel5/python/1-pybinary/: BUILD.bazel
bazel5/python/2-pipdeps/: BUILD.bazel  README.md  WORKSPACE  version.py
bazel6/python/1-pybinary/: WORKSPACE
bazel6/python/2-pipdeps/: requirements_lock.txt
bazel6/python/3-bzlmod/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
bazel6/rules_cc/1-ccbinary/: WORKSPACE
bazel6/rules_cc/3-aspect-gcc-toolchain/: README.md
bazel6/rules_cc/3-mingw64-toolchain/: BUILD.bazel  README.md  WORKSPACE
bazel6/rules_cc/3-mingw64-toolchain/toolchain_mingw64_gcc/: BUILD.bazel  defs.bzl  migwin64_gcc.BUILD
bazel6/rules_cc/4-zig-hermetic-cc-toolchain/: .bazelrc  main.cc
bazel6/rules_go/: README.md
bazel6/rules_go/1-gobinary/: README.md  WORKSPACE
bazel6/rules_go/2-gazelle/: BUILD.bazel  README.md  WORKSPACE
bazel6/rules_go/2-gazelle/example/cli/: BUILD.bazel  main.go
bazel6/rules_go/2-gazelle/example/protos/: BUILD.bazel  echo_service.proto
bazel6/rules_go/3-externaldeps/: BUILD.bazel  WORKSPACE
bazel6/rules_go/3-externaldeps/example/capitalize/: BUILD.bazel
bazel6/rules_go/3-externaldeps/example/cli/: BUILD.bazel
bazel6/rules_go/4-gopackagesdriver/: README.md  go.mod
bazel6/rules_go/4-gopackagesdriver/example/cli/: main.go
bazel6/rules_go/5-rulesgo039/: README.md
bazel6/rules_go/6-rulesgo039-hermetic-gcc/: README.md  WORKSPACE  deps.bzl  go.mod
bazel6/rules_go/6-rulesgo039-hermetic-gcc/bazel/scripts/: gopackagesdriver.sh
bazel6/rules_go/7-rulesgo041-hermetic-gcc/: .bazelrc  README.md  WORKSPACE
bazel6/rules_go/7-rulesgo041-hermetic-gcc/example/capitalize/: capitalize.go
bazel6/rules_go/7-rulesgo041-hermetic-gcc/example/cli/: main.go
bazel6/rules_oci/: .bazelrc  BUILD.bazel  WORKSPACE
bazel6/rules_oci/1-oci-image/: README.md  WORKSPACE
bazel6/rules_oci/2-go-image/: .bazelrc  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  rules_oci.patch
bazel6/rules_oci/2-go-image/app/: BUILD.bazel
bazel6/rules_oci/2-go-image/oci/loader/: BUILD.bazel  defs.bzl  docker.go  files.go  imagebuild.go  json.go  main.go  tar.go
bazel6/rules_py/: version.py
bazel6/rules_py/1-pybinary/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
bazel7/alsa_repro/: BUILD.alsa.bazel  README.md  WORKSPACE
bazel7/aws_repro/: BUILD.aws.bazel  BUILD.curl.bazel  BUILD.openssl.bazel  README.md  WORKSPACE
bazel7/distroless_repro/: BUILD.bazel  README.md  WORKSPACE
bazel7/distroless_repro/base_images/debian_rules_debian_packages/: packages.yaml  snapshots.yaml
bazel7/distroless_repro/base_images/debian_rules_distroless/: debian.lock.json  debian.yaml
bazel7/rules_cc/2-llvm-toolchain/: README.md  WORKSPACE
bazel7/rules_cc/3-aspect-gcc-toolchain/: README.md  WORKSPACE
bazel7/rules_cc/4-zig-hermetic-cc-toolchain/: README.md  WORKSPACE
bazel7/rules_go/1-gobinary/: BUILD.bazel
bazel7/rules_go/2-runfiles/: BUILD.bazel  README.md
bazel7/rules_go/2-runfiles/innerwrapper/: BUILD.bazel  innerwrapper.go
bazel7/rules_go/2-runfiles/outerwrapper/: BUILD.bazel  outerwrapper.go
bazel8/rules_go/1-go_binary/: BUILD.bazel  MODULE.bazel
bazel8/rules_go/2-gazelle/: BUILD.bazel  MODULE.bazel  go.mod  main.go
codelabs/0-installing-bazel/: codelab.md
