load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files(["requirements_lock.txt"])

compile_pip_requirements(
    name = "compile_pip",
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)

py_binary(
    name = "version",
    srcs = ["version.py"],
    deps = [
        "@pip_deps_rich//:pkg",
    ],
)
