load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@bazel_gazelle//language/go:go_default_library",
        "@bazel_gazelle//language/proto:go_default_library",
    ],
)

# gazelle:prefix github.com/juaniquer/bazel-examples
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)
