load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")


# gazelle:prefix github.com/juaniquer/bazel-examples
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "--from_file=go.mod",
        "--to_macro=deps.bzl%go_repositories",
    ],
    command = "update-repos",
)

oci_image(
    name = "image",
    base = "@ubuntu22",
    tars = [":bin_tar"],
    entrypoint = [
        "/app/bazel-examples",
    ],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["bazel-examples/go-image:latest"],
)

go_library(
    name = "bazel-examples_lib",
    srcs = ["main.go"],
    importpath = "github.com/juaniquer/bazel-examples",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bazel-examples",
    embed = [":bazel-examples_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bin_tar",
    srcs = [":bazel-examples"],
    package_dir = "/app",
)