load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/juaniquer/bazel-examples/example/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//example/capitalize",
        "@com_github_briandowns_spinner//:spinner",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
